    system properties (urpi).
  * Allow authentication with pluggable Spring authentication modules that
    do not implement UserDetailService such as existing JAAS modules (urpi).
  * When a password or other value is found un-encrypted in a properties file
    automatically encrypt it to allow for changing database passwords, etc.
    Reported by rebecca and an anonymous user.
  * Upgrade to javadiff 1.1.0.
  * Upgrade to JFlex 1.4.3.
  * Upgrade to JUnit 4.5.
  * Upgrade to JSTL standard taglib 1.1.2.
  * Upgrade to ehcache 1.6.0.

Bugfixes:

  * Update Spring Security configuration to remove reliance on the deprecated
    FilterInvocationDefinitionSourceEditor class.
  * Fix the Bliki local Maven repository metadata to resolve build warnings.
  * Do not use the category sort key for display purposes, only for sorting,
    which is consistent with Mediawiki.  Reported by hanspeterklapf.
  * Allow use of magic words and templates in category sort keys, such as
    [[Category:Test|{{PAGENAME}}]].
  * Throw an error when trying to rename images or categories with topic names
    that do not contain the "Image:" or "Category:" namespace.
  * Viewing a topic that is currently a redirect from its history page should
    not redirect.
  * Use the wiki system directory for temp file storage in ImageIO processing
    to prevent errors on misconfigured systems.  Reported by jfbraz.

Translation Updates:

  * Updated Chinese translations (hfl).
  * Updated French translations (Guillaume_FRANCOIS55).
  * Updated German translations (axelclk).
  * Updated Polish translations (dlpa).
  * Updated Russian translations (shar).


0.7.2
=====

New Features:

  * Updated spam filter patterns.

Bugfixes:

  * Fix missing edit toolbar during preview.  Reported by hanspeterklapf.
  * Fix MS SQL error when searching for user contributions (hanspeterklapf).
  * Fix MS SQL upgrade errors (hanspeterklapf).
  * Fix "array index '1' is invalid" error during setup with Resin 3.2.1.