@@ -24,6 +24,7 @@ admin.caption.recentchangesdefault=Default number of recent changes displayed
 admin.caption.reset=Reset
 admin.caption.searchengine=Search Engine
 admin.caption.serverurl=Server URL
+admin.caption.sitename=Site name
 admin.caption.spamfilter=Reload spam filter patterns
 admin.caption.usepreview=Display "Preview" edit button
 admin.caption.useshowchanges=Display "Show Changes" edit button
@@ -47,6 +48,7 @@ admin.help.rebuildsearch=It may be necessary to rebuild the search index after a
 admin.help.reloadrecentchanges=Reloading recent changes will force the records for the recent changes page to be re-calculated.  This option should not normally be needed.
 admin.help.reloadspamfilter=Reloading the spam filter patterns will update the spam filter with any changes from the <code>/WEB-INF/classes/spam-blacklist.txt</code> file.
 admin.help.serverurl=The base URL for the server, such as http\://www.example.com/.  This value will be used when generating absolute URLs.
+admin.help.sitename=The name of the site.  This value will be appended to all page titles and used in XML exports.  Note that HTML should not be used in the site name.
 admin.help.usespamfilter=The spam filter compares all edits against the patterns in the <code>/WEB-INF/classes/spam-blacklist.txt</code> file and blocks edits that match patterns from that file.
 admin.maintenance.title=Maintenance
 admin.message.cache=Cache successfully cleared.
@@ -172,7 +174,6 @@ common.pagination.previous=Previous {0}
 common.pagination.results=Results per page
 common.save=Save
 common.sectionedit=Edit
-common.sitename=JAMWiki
 common.topic=Topic
 common.undelete=Un-Delete
 common.update=Update
