@@ -172,7 +172,6 @@ common.pagination.previous=Forrige {0}
 common.pagination.results=Resultater pr. side
 common.save=Gem
 common.sectionedit=Rediger
-common.sitename=JAMWiki
 common.topic=Emne
 common.undelete=Fortryd slet
 common.update=Opdater
