@@ -172,7 +172,6 @@ common.pagination.previous=Pr\u00E9c\u00E9dent {0}
 common.pagination.results=R\u00E9sultats par page
 common.save=Sauver
 common.sectionedit=\u00C9diter
-common.sitename=JAMWiki
 common.topic=Sujet
 common.undelete=Restaurer
 common.update=Mise \u00E0 jour
