@@ -172,7 +172,6 @@ common.pagination.previous=Vorige {0}
 common.pagination.results=Resultaten per pagina
 common.save=Bewaar
 common.sectionedit=Bewerk
-common.sitename=JAMWiki
 common.topic=Onderwerp
 common.undelete=Terugzetten
 common.update=Update
