@@ -172,7 +172,6 @@ common.pagination.previous=Previous {0}
 common.pagination.results=Results per page
 common.save=Lagre
 common.sectionedit=Edit
-common.sitename=JAMWiki
 common.topic=Emne
 common.undelete=Un-Delete
 common.update=Update
