@@ -172,7 +172,6 @@ common.pagination.previous=\u041F\u043E\u043F\u0435\u0440\u0435\u0434\u043D\u045
 common.pagination.results=\u0420\u0435\u0437\u0443\u043B\u044C\u0442\u0430\u0442\u0456\u0432 \u043D\u0430 \u0441\u0442\u043E\u0440\u0456\u043D\u043A\u0443
 common.save=\u0417\u0431\u0435\u0440\u0435\u0433\u0442\u0438
 common.sectionedit=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438
-common.sitename=JAMWiki
 common.topic=\u0421\u0442\u043E\u0440\u0456\u043D\u043A\u0430
 common.undelete=\u0412\u0456\u0434\u043D\u043E\u0432\u0438\u0442\u0438
 common.update=\u041E\u043D\u043E\u0432\u0438\u0442\u0438
