@@ -172,7 +172,6 @@ common.pagination.previous=\u4E0A\u4E00\u9875 {0}
 common.pagination.results=\u9875\u6570
 common.save=\u4FDD\u5B58
 common.sectionedit=\u7F16\u8F91
-common.sitename=JAMWiki
 common.topic=\u4E3B\u9898
 common.undelete=\u6062\u590D
 common.update=\u66F4\u65B0
