@@ -172,7 +172,6 @@ common.pagination.previous=\u4E0A\u4E00\u9801 {0}
 common.pagination.results=\u9801\u6578
 common.save=\u4FDD\u5B58
 common.sectionedit=\u7DE8\u8F2F
-common.sitename=JAMWiki
 common.topic=\u4E3B\u984C
 common.undelete=\u6062\u5FA9
 common.update=\u66F4\u65B0
